update env